Fix Form Column Wrapping

--- a/src/res/css/main.css
+++ b/src/res/css/main.css
@@ -1,5 +1,5 @@
 body {
-    width: 1050px;
+    max-width: 1050px;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
